# wiredforge-wasmer-plugin-code

./: .gitignore  Cargo.toml  README.md  install_and_run.sh
crates/example-macro/: Cargo.toml
crates/example-macro/src/: lib.rs
crates/example-plugin/: Cargo.toml  out.rs
crates/example-plugin/src/: lib.rs
crates/example-runner/: Cargo.toml
crates/example-runner/src/: main.rs
docs/: index.html  part_1.html  part_2.html  part_3.html  part_4.html  print.html  searchindex.js  searchindex.json
example-book/: book.toml
example-book/src/: SUMMARY.md  part_1.md  part_2.md  part_3.md  part_4.md
src/: lib.rs
